# agentic-ai-learning-lab

./: readme.md
YTRAG/: pyproject.toml  requirements.txt
YTRAG/data/pdf/: embeddings_explained.md  rag_explained.html  rag_explained.md
YTRAG/notebook/: document.ipynb
