[project]
name = "ytrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.82",
    "pymupdf>=1.26.5",
    "pypdf>=6.6.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "bs4>=0.0.2",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.22",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
]
